--- a/css/reset.css
+++ b/css/reset.css
@@ -4,6 +4,7 @@ body * {
   padding: 0;
   vertical-align: top;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+/*# sourceMappingURL=reset.css.map */
